--- a/Algebra/UGA Questions (no solutions)/UGA_Algebra_Qual_Questions.tex
+++ b/Algebra/UGA Questions (no solutions)/UGA_Algebra_Qual_Questions.tex
@@ -241,6 +241,8 @@ Solution due to Swaroop Hegde, typed up + modifications added by DZG.
 
 Relevant concepts omitted.
 
+Hint/strategy omitted.
+
 Proof omitted.
 
 \hypertarget{spring-2015-1-done}{%
@@ -810,8 +812,8 @@ order \(N\).
   order \(d\). Prove that \({\varepsilon}(a) = -1 \iff d\) is even and
   \(N/d\) is odd.
 \item
-  Suppose \(N> 2\) and \(n\equiv 2 \pmod 4\). Prove that \(G\) is not
-  simple.
+  Suppose \(N> 2\) and \(n\equiv 2 \operatorname{mod}4\). Prove that
+  \(G\) is not simple.
 \end{enumerate}
 
 \begin{quote}
@@ -837,7 +839,8 @@ Let \(p, q\) be distinct primes.
 \item
   Let
   \(\mkern 1.5mu\overline{\mkern-1.5muq\mkern-1.5mu}\mkern 1.5mu \in {\mathbb{Z}}_p\)
-  be the class of \(q\pmod p\) and let \(k\) denote the order of
+  be the class of \(q\operatorname{mod}p\) and let \(k\) denote the
+  order of
   \(\mkern 1.5mu\overline{\mkern-1.5muq\mkern-1.5mu}\mkern 1.5mu\) as an
   element of \({\mathbb{Z}}_p^{\times}\). Prove that no group of order
   \(pq^k\) is simple.
@@ -2134,7 +2137,7 @@ Let \(K\) be a Galois extension of \(F\), and let
 \(G \coloneqq{ \mathsf{Gal}} (K/F)\) and
 \(H \coloneqq{ \mathsf{Gal}} (K/E)\), and suppose \(H\) contains
 \(N_G(P)\), where \(P\) is a Sylow \(p\)-subgroup of \(G\) for \(p\) a
-prime. Prove that \([E: F] \equiv 1 \pmod p\).
+prime. Prove that \([E: F] \equiv 1 \operatorname{mod}p\).
 
 \hypertarget{exercises}{%
 \subsection{Exercises}\label{exercises}}
@@ -3045,13 +3048,13 @@ A=\left[\begin{array}{ccc}
   Find the Jordan canonical form \(J\) of \(A\).
 \item
   Find an invertible matrix \(P\) such that \(P^{-1}A P = J\).
-
-  \begin{quote}
-  You should not need to compute \(P^{-1}\).
-  \end{quote}
 \item
   Write down the minimal polynomial of \(A\).
 \end{enumerate}
+
+\begin{quote}
+You should not need to compute \(P^{-1}\).
+\end{quote}
 
 \hypertarget{spring-2019-7-done}{%
 \subsection{\texorpdfstring{Spring 2019 \#7
@@ -3096,11 +3099,11 @@ A=\left[\begin{array}{lll}{0} & {1} & {-2} \\ {1} & {1} & {-3} \\ {1} & {2} & {-
   Find the Jordan canonical form \(J\) of \(A\).
 \item
   Find an invertible matrix \(P\) such that \(P^{-1}AP = J\).
-
-  \begin{quote}
-  You should not need to compute \(P^{-1}\).
-  \end{quote}
 \end{enumerate}
+
+\begin{quote}
+You should not need to compute \(P^{-1}\).
+\end{quote}
 
 \hypertarget{spring-2017-6-work}{%
 \subsection{\texorpdfstring{Spring 2017 \#6
@@ -3187,15 +3190,15 @@ Let \(T: V\to V\) be a linear map from a 5-dimensional
   Give all of the possible Jordan canonical forms of \(T\).
 \end{enumerate}
 
-\hypertarget{spring-2021-1-work}{%
+\hypertarget{spring-2021-1-done}{%
 \subsection{\texorpdfstring{Spring 2021 \#1
-\(\work\)}{Spring 2021 \#1 \textbackslash work}}\label{spring-2021-1-work}}
+\(\done\)}{Spring 2021 \#1 \textbackslash done}}\label{spring-2021-1-done}}
 
 Let m
 \begin{align*}
 A \coloneqq
 \begin{bmatrix}
-r & 1 & -1 \\
+4 & 1 & -1 \\
 -6 & -1 & 2 \\
 2 & 1 & 1
 \end{bmatrix}
@@ -3208,19 +3211,17 @@ r & 1 & -1 \\
   Find the Jordan canonical form \(J\) of \(A\).
 \item
   Find an invertible matrix \(P\) such that \(J = P ^{-1}A P\).
+\item
+  Write down the minimal polynomial of \(A\).
 \end{enumerate}
 
 \begin{quote}
 You should not need to compute \(P^{-1}\)
 \end{quote}
 
-\begin{enumerate}
-\def\labelenumi{\alph{enumi}.}
-\setcounter{enumi}{2}
-\tightlist
-\item
-  Write down the minimal polynomial of \(A\).
-\end{enumerate}
+Relevant concepts omitted.
+
+Solution omitted.
 
 \hypertarget{fall-2020-5-work}{%
 \subsection{\texorpdfstring{Fall 2020 \#5
