/ ‘Algebra/Review Doc/AlgebraQualNotes.md’ / ‘Algebra/Review Doc/AlgebraQualNotes.tex’ / ‘Algebra/Review Doc/AlgebraQualNotes_stripped.md’ / ‘Algebra/Review Doc/sections/36_Galois_Theory_Computations.md’

--- a/Algebra/Review Doc/AlgebraQualNotes.tex
+++ b/Algebra/Review Doc/AlgebraQualNotes.tex
@@ -7559,8 +7559,8 @@ Some useful exercises and solutions:
   \tightlist
   \item
     Example: \(f(x) = x^3-2\) splits in
-    \({\mathbb{Q}}(\zeta_3, 2^{1\3})\) which is a non-normal extension
-    \({\mathbb{Q}}(2^{1\over 3})\), forcing \(G= S_3\).
+    \({\mathbb{Q}}(\zeta_3, 2^{1\over 3})\) which is a non-normal
+    extension \({\mathbb{Q}}(2^{1\over 3})\), forcing \(G= S_3\).
   \end{itemize}
 \item
   If \(\alpha\beta \in {\mathbb{Q}}\), then
