/ ‘Algebra/Review Doc/AlgebraQualNotes.md’ / ‘Algebra/Review Doc/AlgebraQualNotes.tex’ / ‘Algebra/Review Doc/AlgebraQualNotes_stripped.md’ / ‘Algebra/Review Doc/sections/35_Fields_Extensions.md’

--- a/Algebra/Review Doc/AlgebraQualNotes.tex
+++ b/Algebra/Review Doc/AlgebraQualNotes.tex
@@ -6500,7 +6500,7 @@ f\text{ separable} \iff \gcd(f, f')=1 \iff f'\not\equiv 0 \iff_{\operatorname{ch
   \tightlist
   \item
     \(\impliedby\): If \(f(x) = g(x^p)\) then
-    \(f'(x) = g'(x^p)\cdot px^{p-1}\eqiuv 0\).
+    \(f'(x) = g'(x^p)\cdot px^{p-1}\equiv 0\).
   \item
     \(\implies\): Let \(f\) be irreducible and inseparable, so
     \(f' \equiv 0 \in k[x]\). Then
