/ ‘Algebra/Review Doc/AlgebraQualNotes.md’ / ‘Algebra/Review Doc/AlgebraQualNotes.tex’ / ‘Algebra/Review Doc/AlgebraQualNotes_stripped.md’ / ‘Algebra/Review Doc/sections/13_Groups_Classification.md’

--- a/Algebra/Review Doc/AlgebraQualNotes.tex
+++ b/Algebra/Review Doc/AlgebraQualNotes.tex
@@ -3740,7 +3740,7 @@ normal subgroup of order \(r\).
     Applying the same lemma to \(R'\) immediately yields a normal
     subgroup \(R''\) of order \(r\) in \(R'\)
   \item
-    Now use that \(R'' \mathrm{\char} R'\) since Sylows are
+    Now use that \(R'' \operatorname{char} R'\) since Sylows are
     characteristic, and \(R'{~\trianglelefteq~}G\), so
     \(R''{~\trianglelefteq~}G\) too.
   \end{itemize}
