/ ‘Algebra/Review Doc/AlgebraQualNotes.html’ / ‘Algebra/Review Doc/AlgebraQualNotes.md’ / ‘Algebra/Review Doc/AlgebraQualNotes.pdf’ / ‘Algebra/Review Doc/AlgebraQualNotes.tex’ / ‘Algebra/Review Doc/AlgebraQualNotes_stripped.md’ / ‘Algebra/Review Doc/sections/20_Rings.md’ / ‘Algebra/Review Doc/tex_tempfiles/AlgebraQualNotes.pdf’

--- a/Algebra/Review Doc/AlgebraQualNotes.tex
+++ b/Algebra/Review Doc/AlgebraQualNotes.tex
@@ -4704,7 +4704,7 @@ A ring \(R\) is a \textbf{unique factorization domain} iff \(R\) is an
 integral domain and every \(r\in R\setminus\left\{{0}\right\}\) admits a
 decomposition
 \begin{align*}  
-r = u \mfpod_{i=1}^n p_i
+r = u \prod_{i=1}^n p_i
 \end{align*}
 where \(u\in R^{\times}\) and the \(p_i\) irreducible, which is unique
 up to associates.
