/ ‘Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.html’ / ‘Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.tex’ / ‘Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions_stripped.md’ / ‘Algebra/UGA Question (with solutions)/tex_tempfiles/UGA_Algebra_Qual_Solutions.pdf’ + ‘Algebra/UGA Questions (no solutions)/figures/2021-08-15_00-02-28.png’ / ‘Algebra/UGA Questions (no solutions)/sections/060_Commutative Algebra.md’ / ‘Algebra/UGA Questions (no solutions)/sections/072_Fields and Galois Theory.md’

--- a/Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.tex
+++ b/Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.tex
@@ -4240,6 +4240,8 @@ A ring \(R\) is called \emph{simple} if its only two-sided ideals are
 
 \begin{solution}
 
+\envlist
+
 \begin{proof}[of a]
 
 \(\implies\):
@@ -5197,7 +5199,6 @@ Part b:
   \sigma:
   &\begin{cases}
   \omega &\mapsto \omega
-  &  
   \\
   \zeta_3 &\mapsto \zeta_3\cdot \zeta_3.
   \end{cases}
@@ -5206,7 +5207,6 @@ Part b:
   \tau:
   &\begin{cases}
   \omega &\mapsto \omega
-  &  
   \\
   \zeta_3 &\mapsto \mkern 1.5mu\overline{\mkern-1.5mu\zeta_3\mkern-1.5mu}\mkern 1.5mu.
   \end{cases}
@@ -5601,7 +5601,8 @@ Computations show that
 
 and thus
 \begin{align*}
-\sigma^2(\alpha_1) &= \sigma(\alpha_2) \\
+\sigma^2(\alpha_1) 
+&= \sigma(\alpha_2) \\
 &= \sigma\left(\frac{\sqrt 2}{\alpha_1}\right) \\
 &= \frac{\sigma(\sqrt 2)}{\sigma(\alpha_1)} \\
 &= \frac{\sigma(\alpha_1^2 - 2)}{\alpha_2} \\
