--- a/Real Analysis/UGA Question (with solutions)/UGA_Real_Analysis_Qual_Solutions.tex
+++ b/Real Analysis/UGA Question (with solutions)/UGA_Real_Analysis_Qual_Solutions.tex
@@ -7571,6 +7571,696 @@ Apply Fubini-Tonelli to commute two sums:
 
 \end{solution}
 
+\hypertarget{midterm-exam-2-december-2014}{%
+\section{Midterm Exam 2 (December
+2014)}\label{midterm-exam-2-december-2014}}
+
+\hypertarget{section}{%
+\subsection{1}\label{section}}
+
+\begin{quote}
+Note: (a) is a repeat.
+\end{quote}
+
+\begin{itemize}
+\tightlist
+\item
+  Let \(\Lambda\in L^2(X) {}^{ \vee }\).
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Show that
+    \(M\coloneqq\left\{{f\in L^2(X) {~\mathrel{\Big|}~}\Lambda(f) = 0}\right\} \subseteq L^2(X)\)
+    is a closed subspace, and \(L^2(X) = M \oplus M\perp\).
+  \item
+    Prove that there exists a unique \(g\in L^2(X)\) such that
+    \(\Lambda(f) = \int_X g \mkern 1.5mu\overline{\mkern-1.5muf\mkern-1.5mu}\mkern 1.5mu\).
+  \end{itemize}
+\end{itemize}
+
+\hypertarget{section-1}{%
+\subsection{2}\label{section-1}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\tightlist
+\item
+  In parts:
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  Given a definition of \(L^\infty({\mathbb{R}}^n)\).
+\item
+  Verify that \({\left\lVert {{-}} \right\rVert}_\infty\) defines a norm
+  on \(L^\infty({\mathbb{R}}^n)\).
+\item
+  Carefully proved that
+  \((L^\infty({\mathbb{R}}^n), {\left\lVert {{-}} \right\rVert}_\infty)\)
+  is a Banach space.
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\setcounter{enumi}{1}
+\tightlist
+\item
+  Prove that for any measurable \(f:{\mathbb{R}}^n \to {\mathbb{C}}\),
+  \begin{align*}
+  L^1({\mathbb{R}}^n) \cap L^\infty({\mathbb{R}}^n) \subset L^2({\mathbb{R}}^n) {\quad \operatorname{and} \quad} {\left\lVert {f} \right\rVert}_2 \leq {\left\lVert {f} \right\rVert}_1^{1\over 2} \cdot {\left\lVert {f} \right\rVert}_\infty^{1\over 2}
+  .\end{align*}
+\end{enumerate}
+
+\hypertarget{section-2}{%
+\subsection{3}\label{section-2}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove that if \(f, g: {\mathbb{R}}^n\to {\mathbb{C}}\) is both
+  measurable then \(F(x, y) \coloneqq f(x)\) and
+  \(h(x, y)\coloneqq f(x-y) g(y)\) is measurable on
+  \({\mathbb{R}}^n\times{\mathbb{R}}^n\).
+\item
+  Show that if
+  \(f\in L^1({\mathbb{R}}^n) \cap L^\infty({\mathbb{R}}^n)\) and
+  \(g\in L^1({\mathbb{R}}^n)\), then
+  \(f\ast g \in L^1({\mathbb{R}}^n) \cap L^\infty({\mathbb{R}}^n)\) is
+  well defined, and carefully show that it satisfies the following
+  properties:
+  \begin{align*}
+  {\left\lVert {f\ast g} \right\rVert}_\infty &\leq {\left\lVert {g} \right\rVert}_1 {\left\lVert {f} \right\rVert}_\infty
+  {\left\lVert {f\ast g} \right\rVert}_1      &\leq {\left\lVert {g} \right\rVert}_1 {\left\lVert {f} \right\rVert}_1
+  {\left\lVert {f\ast g} \right\rVert}_2      &\leq {\left\lVert {g} \right\rVert}_1 {\left\lVert {f} \right\rVert}_2
+  .\end{align*}
+\end{enumerate}
+
+\begin{quote}
+Hint: first show
+\({\left\lvert {f\ast g} \right\rvert}^2 \leq {\left\lVert {g} \right\rVert}_1 \qty{ {\left\lvert {f} \right\rvert}^2 \ast {\left\lvert {g} \right\rvert}}\).
+\end{quote}
+
+\hypertarget{weierstrass-approximation-theorem}{%
+\subsection{4 (Weierstrass Approximation
+Theorem)}\label{weierstrass-approximation-theorem}}
+
+\begin{quote}
+Note: (a) is a repeat.
+\end{quote}
+
+Let \(f: [0, 1]\to {\mathbb{R}}\) be continuous, and prove the
+Weierstrass approximation theorem: for any \({\varepsilon}> 0\) there
+exists a polynomial \(P\) such that
+\({\left\lVert {f - P} \right\rVert}_{\infty} < {\varepsilon}\).
+
+\hypertarget{midterm-exam-1-october-2018}{%
+\section{Midterm Exam 1 (October
+2018)}\label{midterm-exam-1-october-2018}}
+
+\hypertarget{problem-1}{%
+\subsection{Problem 1}\label{problem-1}}
+
+\label{equivalence_of_approximating_measures} Let
+\(E \subseteq {\mathbb{R}}^n\) be bounded. Prove the following are
+equivalent:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  For any \(\epsilon>0\) there exists and open set \(G\) and a closed
+  set \(F\) such that
+  \begin{align*}
+  F \subseteq E \subseteq G && m(G\setminus F) < \epsilon
+  .\end{align*}
+\item
+  There exists a \(G_ \delta\) set \(V\) and an \(F_ \sigma\) set \(H\)
+  such that
+  \begin{align*}
+  m(V\setminus H) = 0
+  .\end{align*}
+\end{enumerate}
+
+\hypertarget{problem-2}{%
+\subsection{Problem 2}\label{problem-2}}
+
+Let \(\left\{{ f_k }\right\} _{k=1}^{\infty }\) be a sequence of
+extended real-valued Lebesgue measurable functions.
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove that \(\sup_k f_k\) is a Lebesgue measurable function.
+\item
+  Prove that if \(\lim_{k \to \infty } f_k(x)\) exists for every
+  \(x \in {\mathbb{R}}^n\) then \(\lim_{k\to \infty } f_k\) is also a
+  measurable function.
+\end{enumerate}
+
+\hypertarget{problem-3}{%
+\subsection{Problem 3}\label{problem-3}}
+
+\hypertarget{a-4}{%
+\subsubsection{a}\label{a-4}}
+
+Prove that if \(E \subseteq {\mathbb{R}}^n\) is a Lebesgue measurable
+set, then for any \(h \in {\mathbb{R}}\) the set
+\begin{align*}
+E+h \coloneqq\left\{{x + h {~\mathrel{\Big|}~}x\in E }\right\}
+\end{align*}
+is also Lebesgue measurable and satisfies \(m(E + h) = m(E)\).
+
+\hypertarget{b-3}{%
+\subsubsection{b}\label{b-3}}
+
+Prove that if \(f\) is a non-negative measurable function on
+\({\mathbb{R}}^n\) and \(h\in {\mathbb{R}}^n\) then the function
+\begin{align*}
+\tau_h d(x) \coloneqq f(x-h)
+\end{align*}
+is a non-negative measurable function and
+\begin{align*}
+\int f(x) \,dx= \int f(x-h) \,dx
+.\end{align*}
+
+\hypertarget{problem-4}{%
+\subsection{Problem 4}\label{problem-4}}
+
+Let \(f: {\mathbb{R}}^n\to {\mathbb{R}}\) be a Lebesgue measurable
+function.
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove that for all \(\alpha> 0\) ,
+  \begin{align*}
+  A_ \alpha  \coloneqq\left\{{x\in {\mathbb{R}}^n {~\mathrel{\Big|}~}{\left\lvert { f(x) } \right\rvert} > \alpha}\right\} \implies m(A_ \alpha) \leq {1\over \alpha} \int {\left\lvert {f (x)} \right\rvert} \,dx
+  .\end{align*}
+\item
+  Prove that
+  \begin{align*}
+  \int {\left\lvert { f(x) } \right\rvert} \,dx= 0 \iff f = 0 \text{ almost everywhere}
+  .\end{align*}
+\end{enumerate}
+
+\hypertarget{problem-5}{%
+\subsection{Problem 5}\label{problem-5}}
+
+Let \(\left\{{ f_k }\right\}_{k=1}^{\infty } \subseteq L^2([0, 1])\) be
+a sequence which \emph{converges in \(L^1\)} to a function \(f\).
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove that \(f\in L^1([0, 1])\).
+\item
+  Give an example illustrating that \(f_k\) may not converge to \(f\)
+  almost everywhere.
+\item
+  Prove that \(\left\{{f_k}\right\}\) must contain a subsequence that
+  converges to \(f\) almost everywhere.
+\end{enumerate}
+
+\hypertarget{midterm-exam-2-november-2018}{%
+\section{Midterm Exam 2 (November
+2018)}\label{midterm-exam-2-november-2018}}
+
+\hypertarget{problem-1-1}{%
+\subsection{Problem 1}\label{problem-1-1}}
+
+Let \(f, g\in L^1([0, 1])\), define \(F(x) = \int_0^x f(y)\,dy\) and
+\(G(x) = \int_0^x g(y)\,dy\), and show
+\begin{align*}
+\int_0^1 F(x)g(x) \,dx = F(1)G(1) - \int_0^1 f(x) G(x) \, dx
+.\end{align*}
+
+\hypertarget{problem-2-1}{%
+\subsection{Problem 2}\label{problem-2-1}}
+
+Let \(\phi\in L^1({\mathbb{R}}^n)\) such that \(\int \phi = 1\) and
+define \(\phi_t(x) = t^{-n}\phi(t^{-1}x)\). Show that if \(f\) is
+bounded and uniformly continuous then
+\(f\ast \phi_t \overset{t\to 0}\to f\) uniformly.
+
+\hypertarget{problem-3-1}{%
+\subsection{Problem 3}\label{problem-3-1}}
+
+Let \(g\in L^\infty([0, 1])\).
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove
+  \begin{align*}
+  {\left\lVert {g} \right\rVert}_{L^p([0, 1])}  \overset{p\to\infty}\to {\left\lVert {g} \right\rVert}_{L^\infty([0, 1])}
+  .\end{align*}
+\item
+  Prove that the map
+  \begin{align*}
+  \Lambda_g: L^1([0, 1]) &\to {\mathbb{C}}\\
+  f &\mapsto \int_0^1 fg
+  \end{align*}
+  defines an element of \(L^1([0, 1]) {}^{ \vee }\) with
+  \({\left\lVert {\Lambda_g} \right\rVert}_{L^1([0, 1]) {}^{ \vee }}= {\left\lVert {g} \right\rVert}_{L^\infty([0, 1])}\).
+\end{enumerate}
+
+\hypertarget{problem-4-1}{%
+\subsection{Problem 4}\label{problem-4-1}}
+
+See \cref{hilbert_space_exam_question}
+
+\hypertarget{practice-exam-november-2014}{%
+\section{Practice Exam (November
+2014)}\label{practice-exam-november-2014}}
+
+\hypertarget{problem-1-2}{%
+\subsection{Problem 1}\label{problem-1-2}}
+
+Let \(m_*(E)\) denote the Lebesgue outer measure of a set
+\(E \subseteq {\mathbb{R}}^n\).
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove using the definition of Lebesgue outer measure that
+  \begin{align*}
+  m \qty{ \displaystyle\bigcup_{j=1}^{\infty } E_j  } \leq \sum_{j=1}^{\infty } m_*(E_j) 
+  .\end{align*}
+\item
+  Prove that for any \(E \subseteq {\mathbb{R}}^n\) and any
+  \(\epsilon> 0\) there exists an open set \(G\) with \(E \subseteq G\)
+  and
+  \begin{align*}
+  m_*(E) \leq m_*(G) \leq m_*(E) + \epsilon
+  .\end{align*}
+\end{enumerate}
+
+\hypertarget{problem-2-2}{%
+\subsection{Problem 2}\label{problem-2-2}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  See \cref{equivalence_of_approximating_measures}
+\item
+  Let \(f_k\) be a sequence of extended real-valued Lebesgue measurable
+  function.
+
+  \begin{enumerate}
+  \def\labelenumii{\roman{enumii}.}
+  \item
+    Prove that \(\inf_k f_k, \sup_k f_k\) are both Lebesgue measurable
+    function.
+
+    \emph{Hint: argue that}
+    \begin{align*}
+    \left\{{x {~\mathrel{\Big|}~}\inf_k f_k(x) < a}\right\} = \displaystyle\bigcup_k \left\{{x {~\mathrel{\Big|}~}f_k(x) < a}\right\}
+    .\end{align*}
+  \item
+    Carefully state Fatou's Lemma and deduce the Monotone Converge
+    Theorem from it.
+  \end{enumerate}
+\end{enumerate}
+
+\hypertarget{problem-3-2}{%
+\subsection{Problem 3}\label{problem-3-2}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove that if \(f, g\in L^+({\mathbb{R}})\) then
+  \begin{align*}
+  \int(f +g) = \int f + \int g
+  .\end{align*}
+  Extend this to establish that if
+  \(\left\{{ f_k}\right\} \subseteq L^+({\mathbb{R}}^n)\) then
+  \begin{align*}
+    \int \sum_k f_k = \sum_k \int f_k
+    .\end{align*}
+\item
+  Let
+  \(\left\{{E_j}\right\}_{j\in {\mathbb{N}}} \subseteq \mathcal{M}({\mathbb{R}}^n)\)
+  with \(E_j \nearrow E\). Use the countable additivity of \(\mu_f\) on
+  \(\mathcal{M}({\mathbb{R}}^n)\) established above to show that
+  \begin{align*}
+    \mu_f(E) = \lim_{j\to \infty } \mu_f(E_j)
+    .\end{align*}
+\end{enumerate}
+
+\hypertarget{problem-4-2}{%
+\subsection{Problem 4}\label{problem-4-2}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Show that
+  \(f\in L^1({\mathbb{R}}^n) \implies {\left\lvert {f(x)} \right\rvert} < \infty\)
+  almost everywhere.
+\item
+  Show that if \(\left\{{f_k}\right\} \subseteq L^1({\mathbb{R}}^n)\)
+  with \(\sum {\left\lVert {f_k} \right\rVert}_1 < \infty\) then
+  \(\sum f_k\) converges almost everywhere and in \(L^1\).
+\item
+  Use the Dominated Convergence Theorem to evaluate
+  \begin{align*}
+  \lim_{t\to 0} \int_0^1 {e^{tx^2} - 1 \over t} \,dx
+  .\end{align*}
+\end{enumerate}
+
+\hypertarget{practice-exam-november-2014-1}{%
+\section{Practice Exam (November
+2014)}\label{practice-exam-november-2014-1}}
+
+\hypertarget{fubini-tonelli-1}{%
+\subsection{1: Fubini-Tonelli}\label{fubini-tonelli-1}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Carefully state Tonelli's theorem for a nonnegative function
+  \(F(x, t)\) on \({\mathbb{R}}^n\times{\mathbb{R}}\).
+\item
+  Let \(f:{\mathbb{R}}^n\to [0, \infty]\) and define
+  \begin{align*}
+  {\mathcal{A}}\coloneqq\left\{{(x, t) \in {\mathbb{R}}^n\times{\mathbb{R}}{~\mathrel{\Big|}~}0\leq t \leq f(x)}\right\}
+  .\end{align*}
+
+  Prove the validity of the following two statements:
+
+  \begin{enumerate}
+  \def\labelenumii{\arabic{enumii}.}
+  \tightlist
+  \item
+    \(f\) is Lebesgue measurable on
+    \({\mathbb{R}}^{n} \iff {\mathcal{A}}\) is a Lebesgue measurable
+    subset of \({\mathbb{R}}^{n+1}\).
+  \item
+    If \(f\) is Lebesgue measurable on \({\mathbb{R}}^n\) then
+    \begin{align*}
+    m(\mathcal{A})=\int_{\mathbb{R}^{n}} f(x) d x=\int_{0}^{\infty} m\left(\left\{x \in \mathbb{R}^{n}{~\mathrel{\Big|}~}f(x) \geq t\right\}\right) d t
+    .\end{align*}
+  \end{enumerate}
+\end{enumerate}
+
+\hypertarget{convolutions-and-the-fourier-transform}{%
+\subsection{2: Convolutions and the Fourier
+Transform}\label{convolutions-and-the-fourier-transform}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Let \(f, g\in L^1({\mathbb{R}}^n)\) and give a definition of
+  \(f\ast g\).
+\item
+  Prove that if \(f, g\) are integrable and bounded, then
+  \begin{align*}
+  (f\ast g)(x) \overset{{\left\lvert {x} \right\rvert}\to\infty}\to 0
+  .\end{align*}
+\item
+  In parts:
+
+  \begin{enumerate}
+  \def\labelenumii{\arabic{enumii}.}
+  \tightlist
+  \item
+    Define the \emph{Fourier transform} of an integrable function \(f\)
+    on \({\mathbb{R}}^n\).
+  \item
+    Give an outline of the proof of the Fourier inversion formula.
+  \item
+    Give an example of a function \(f\in L^1({\mathbb{R}}^n)\) such that
+    \(\widehat{f}\) is not in \(L^1({\mathbb{R}}^n)\).
+  \end{enumerate}
+\end{enumerate}
+
+\hypertarget{hilbert-spaces}{%
+\subsection{3: Hilbert Spaces}\label{hilbert-spaces}}
+
+\label{hilbert_space_exam_question}
+
+Let \(\left\{{u_n}\right\}_{n=1}^\infty\) be an orthonormal sequence in
+a Hilbert space \(H\).
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Let \(x\in H\) and verify that
+  \begin{align*}
+  \left\|x-\sum_{n=1}^{N}\left\langle x, u_{n}\right\rangle u_{n}\right\|_H^{2}
+  =
+  \|x\|_H^{2}-\sum_{n=1}^{N}\left|\left\langle x, u_{n}\right\rangle\right|^{2}
+  .\end{align*}
+  for any \(N\in {\mathbb{N}}\) and deduce that
+  \begin{align*}
+  \sum_{n=1}^{\infty}\left|\left\langle x, u_{n}\right\rangle\right|^{2} \leq\|x\|_H^{2}
+  .\end{align*}
+\item
+  Let
+  \(\left\{{a_n}\right\}_{n\in {\mathbb{N}}} \in \ell^2({\mathbb{N}})\)
+  and prove that there exists an \(x\in H\) such that
+  \(a_n = {\left\langle {x},~{u_n} \right\rangle}\) for all
+  \(n\in {\mathbb{N}}\), and moreover \(x\) may be chosen such that
+  \begin{align*}
+  {\left\lVert {x} \right\rVert}_H = \qty{ \sum_{n\in {\mathbb{N}}} {\left\lvert {a_n} \right\rvert}^2}^{1\over 2}
+  .\end{align*}
+\item
+  Prove that if \(\left\{{u_n}\right\}\) is \emph{complete}, Bessel's
+  inequality becomes an equality.
+\end{enumerate}
+
+\begin{solution}[part b]
+
+\envlist
+
+\begin{itemize}
+\item
+  Take \(\left\{{a_n}\right\} \in \ell^2\), then note that
+  \(\sum {\left\lvert {a_n} \right\rvert}^2 < \infty \implies\) the
+  tails vanish.
+\item
+  Define \(x \coloneqq\displaystyle\lim_{N\to\infty} S_N\) where
+  \(S_N = \sum_{k=1}^N a_k u_k\)
+\item
+  \(\left\{{S_N}\right\}\) is Cauchy and \(H\) is complete, so
+  \(x\in H\).
+\item
+  By construction,
+  \begin{align*}
+  {\left\langle {x},~{u_n} \right\rangle} = {\left\langle {\sum_k a_k u_k},~{u_n} \right\rangle} = \sum_k a_k {\left\langle {u_k},~{u_n} \right\rangle} = a_n 
+  \end{align*}
+  since the \(u_k\) are all orthogonal.
+\item
+  By Pythagoras since the \(u_k\) are normal,
+  \begin{align*}
+  {\left\lVert {x} \right\rVert}^2 = {\left\lVert {\sum_k a_k u_k} \right\rVert}^2 = \sum_k {\left\lVert {a_k u_k} \right\rVert}^2 = \sum_k {\left\lvert {a_k} \right\rvert}^2
+  .\end{align*}
+\end{itemize}
+
+\end{solution}
+
+\begin{solution}[part c]
+
+Let \(x\) and \(u_n\) be arbitrary.
+
+\begin{align*}
+{\left\langle {x - \sum_{k=1}^\infty {\left\langle {x},~{u_k} \right\rangle}u_k },~{u_n} \right\rangle}
+&=
+{\left\langle {x},~{u_n} \right\rangle}
+-
+{\left\langle {\sum_{k=1}^\infty {\left\langle {x},~{u_k} \right\rangle}u_k },~{u_n} \right\rangle} \\
+&=
+{\left\langle {x},~{u_n} \right\rangle}
+-
+\sum_{k=1}^\infty  {\left\langle {{\left\langle {x},~{u_k} \right\rangle}u_k },~{u_n} \right\rangle} \\
+&=
+{\left\langle {x},~{u_n} \right\rangle}
+-
+\sum_{k=1}^\infty  {\left\langle {x},~{u_k} \right\rangle} {\left\langle {u_k },~{u_n} \right\rangle} \\
+&= {\left\langle {x},~{u_n} \right\rangle} - {\left\langle {x},~{u_n} \right\rangle} = 0 \\
+\implies 
+x - \sum_{k=1}^\infty {\left\langle {x},~{u_k} \right\rangle}u_k &= 0 \quad\text{by completeness}
+.\end{align*}
+
+So
+\begin{align*}
+x = \sum_{k=1}^\infty {\left\langle {x},~{u_k} \right\rangle} u_k
+\implies
+{\left\lVert {x} \right\rVert}^2 = \sum_{k=1}^\infty {\left\lvert {{\left\langle {x},~{u_k} \right\rangle}} \right\rvert}^2. \hfill\blacksquare
+.\end{align*}
+
+\end{solution}
+
+\hypertarget{lp-spaces}{%
+\subsection{\texorpdfstring{4: \(L^p\)
+Spaces}{4: L\^{}p Spaces}}\label{lp-spaces}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove Holder's inequality: let \(f\in L^p, g\in L^q\) with \(p, q\)
+  conjugate, and show that
+  \begin{align*}
+  {\left\lVert {fg} \right\rVert}_{p} \leq {\left\lVert {f} \right\rVert}_{p} \cdot {\left\lVert {g} \right\rVert}_{q}
+  .\end{align*}
+\item
+  Prove Minkowski's Inequality:
+  \begin{align*}
+  1\leq p < \infty \implies {\left\lVert {f+g} \right\rVert}_{p} \leq {\left\lVert {f} \right\rVert}_{p}+ {\left\lVert {g} \right\rVert}_{p}
+  .\end{align*}
+  Conclude that if \(f, g\in L^p({\mathbb{R}}^n)\) then so is \(f+g\).
+\item
+  Let \(X = [0, 1] \subset {\mathbb{R}}\).
+
+  \begin{enumerate}
+  \def\labelenumii{\arabic{enumii}.}
+  \item
+    Give a definition of the Banach space \(L^\infty(X)\) of essentially
+    bounded functions of \(X\).
+  \item
+    Let \(f\) be non-negative and measurable on \(X\), prove that
+    \begin{align*}
+     \int_X f(x)^p \,dx \overset{p\to\infty}\to
+     \begin{dcases}
+     \infty \quad\text{or} \\
+     m\qty{\left\{{f^{-1}(1)}\right\}}
+     \end{dcases}
+     ,\end{align*}
+    and characterize the functions of each type
+  \end{enumerate}
+\end{enumerate}
+
+\begin{solution}
+
+\begin{align*}
+\int f^p 
+&= \int_{x < 1} f^p + \int_{x=1}f^p + \int_{x > 1} f^p\\
+&= \int_{x < 1} f^p + \int_{x=1}1 + \int_{x > 1} f^p \\
+&= \int_{x < 1} f^p + m(\left\{{f = 1}\right\}) + \int_{x > 1} f^p \\
+&\overset{p\to\infty}\to 0  + m(\left\{{f = 1}\right\}) + 
+\begin{cases} 
+0 & m(\left\{{x\geq 1}\right\}) = 0 \\ 
+\infty & m(\left\{{x\geq 1}\right\}) > 0.
+\end{cases}
+\end{align*}
+
+\end{solution}
+
+\hypertarget{dual-spaces}{%
+\subsection{5: Dual Spaces}\label{dual-spaces}}
+
+Let \(X\) be a normed vector space.
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Give the definition of what it means for a map \(L:X\to {\mathbb{C}}\)
+  to be a \emph{linear functional}.
+\item
+  Define what it means for \(L\) to be \emph{bounded} and show \(L\) is
+  bounded \(\iff L\) is continuous.
+\item
+  Prove that
+  \((X {}^{ \vee }, {\left\lVert {{-}} \right\rVert}_{^{\operatorname{op}}})\)
+  is a Banach space.
+\end{enumerate}
+
+\hypertarget{fall-2021}{%
+\section{Fall 2021}\label{fall-2021}}
+
+\hypertarget{fall-2021-1}{%
+\subsection{Fall 2021 \#1}\label{fall-2021-1}}
+
+Let \(\left\{x_{n}\right\}_{n-1}^{\infty}\) be a sequence of real
+numbers such that \(x_{1}>0\) and
+\begin{align*}
+x_{n+1}=1-\left(2+x_{n}\right)^{-1}=\frac{1+x_{n}}{2+x_{n}} \text {. }
+\end{align*}
+Prove that the sequence \(\left\{x_{n}\right\}\) converges, and find its
+limit.
+
+\hypertarget{fall-2021-2}{%
+\subsection{Fall 2021 \#2}\label{fall-2021-2}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Let \(F \subset \mathbb{R}\) be closed, and define
+  \begin{align*}
+  \delta_{F}(y):=\inf _{x \in F}|x-y| .
+  \end{align*}
+  For \(y \notin F\), show that
+  \begin{align*}
+  \int_{F}|x-y|^{-2} d x \leq \frac{2}{\delta_F(y)},
+  \end{align*}
+\item
+  Let \(F \subset \mathbb{R}\) be a closed set whose complement has
+  finite measure, i.e.~\(m(R \backslash F)<\) \infty. Define the
+  function
+  \begin{align*}
+  I(x):=\int_{\mathbb{R}} \frac{\delta_{F}(y)}{|x-y|^{2}} d y
+  \end{align*}
+  Prove that \(I(x)=\infty\) if \(x \notin F\), however \(I(x)<\infty\)
+  for almost every \(x \in F\).
+
+  \begin{quote}
+  Hint: investigate \(\int_{F} I(x) d x\).
+  \end{quote}
+\end{enumerate}
+
+\hypertarget{fall-2021-3}{%
+\subsection{Fall 2021 \#3}\label{fall-2021-3}}
+
+Recall that a set \(E \subset \mathbb{R}^{d}\) is measurable if for
+every \(c>0\) there is an open set \(U \subseteq {\mathbb{R}}^d\) such
+that \(m^{*}(U \setminus E)<\epsilon\).
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove that if \(E\) is measurable then for all \(\epsilon>0\) there
+  exists an elementary \(\operatorname{set} F\), such that
+  \(m(E \Delta F)<\epsilon\).
+
+  Here \(m(E)\) denotes the Lebesgue measure of \(E\), a set \(F\) is
+  called elementary if it is a finite union of rectangles and
+  \(E \Delta F\) denotes the symmetric difference of the sets \(E\) and
+  \(F\).
+\item
+  Let \(E \subset \mathbb{R}\) be a measurable set, such that
+  \(0<m(E)<\infty\). Use part (a) to show that
+  \begin{align*}
+  \lim _{n \rightarrow \infty} \int_{E} \sin (n t) d t=0
+  \end{align*}
+\end{enumerate}
+
+\hypertarget{fall-2021-4}{%
+\subsection{Fall 2021 \#4}\label{fall-2021-4}}
+
+Let \(f\) be a measurable function on \(\mathbb{R}\). Show that the
+graph of \(f\) has measure zero in \(\mathbb{R}^{2}\).
+
+\hypertarget{fall-2021-5}{%
+\subsection{Fall 2021 \#5}\label{fall-2021-5}}
+
+Consider the Hilbert space \(\mathcal{H}=L^{2}([0,1])\).
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove that of \(E \subset \mathcal{H}\) is closed and convex then
+  \(E\) contains an element of smallest norm.
+
+  \begin{quote}
+  Hint: Show that if
+  \(\left\|f_{n}\right\|_{2} \rightarrow \min \left\{f \in E:\|f\|_{2}\right\}\)
+  then \(\left\{f_{n}\right\}\) is a Cauchy sequence.
+  \end{quote}
+\item
+  Construct a non-empty closed subset \(E \subset \mathcal{H}\) which
+  does not contain an element of smallest norm.
+\end{enumerate}
+
 
 \printbibliography[title=Bibliography]
 
