/ ‘Real Analysis/UGA Questions (no solutions)/sections/9999_2021_Fall.md’

--- a/Real Analysis/UGA Questions (no solutions)/sections/9999_2021_Fall.md
+++ b/Real Analysis/UGA Questions (no solutions)/sections/9999_2021_Fall.md
@@ -20,8 +20,8 @@ For $y \notin F$, show that
 \int_{F}|x-y|^{-2} d x \leq \frac{2}{\delta_F(y)},
 \]
 b.
-Let $F \subset \mathbb{R}$ be a closed set whose complement has finite measure, i.e. $m(R \backslash F)<$
-\infty. Define the function
+Let $F \subset \mathbb{R}$ be a closed set whose complement has finite measure, i.e. $m(R \sm F)< \infty$. 
+Define the function
 \[
 I(x):=\int_{\mathbb{R}} \frac{\delta_{F}(y)}{|x-y|^{2}} d y
 \]
