/ ‘Real Analysis/UGA Question (with solutions)/UGA_Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Question (with solutions)/UGA_Real_Analysis_Qual_Solutions.tex’ / ‘Real Analysis/UGA Question (with solutions)/UGA_Real_Analysis_Qual_Solutions_stripped.md’ / ‘Real Analysis/UGA Questions (no solutions)/sections/9999_2021_Fall.md’

--- a/Real Analysis/UGA Questions (no solutions)/sections/9999_2021_Fall.md
+++ b/Real Analysis/UGA Questions (no solutions)/sections/9999_2021_Fall.md
@@ -25,7 +25,7 @@ Define the function
 \[
 I(x):=\int_{\mathbb{R}} \frac{\delta_{F}(y)}{|x-y|^{2}} d y
 \]
-Prove that $I(x)=\infty$ if $x \notin F$, however $I(x)<\infty$ for almost every $x \in F$. 
+Prove that $I(x)=\infty$ if $x \not\in F$, however $I(x)<\infty$ for almost every $x \in F$. 
 
   > Hint: investigate $\int_{F} I(x) d x$.
 
