/ ‘Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md’

--- a/Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md
+++ b/Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md
@@ -25,6 +25,12 @@ Suppose that an automorphism $\phi \in \operatorname{Aut}\left(S_{n}\right)$ pre
 
 Give generators and relations for the non-commutative group $G$ of order 63 containing an element of order $9 .$
 
+
+:::{.solution}
+
+:::
+
+
 ## Fall 2021 #3
 
 What is the Jordan normal form over $\mathbb{C}$ of a $7 \times 7$ matrix $A$ which satisfies all of the following conditions:
