--- a/Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md
+++ b/Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md
@@ -27,7 +27,16 @@ Give generators and relations for the non-commutative group $G$ of order 63 cont
 
 
 :::{.solution}
+\envlist
 
+- Idea: take a semidirect product involving $C_9$ and $C_7$.
+  We'll need some facts: $\Hom(C_m, C_n) \cong C_d$ where $d = \gcd(m, n)$, and $\Aut(C_m)\cong C_m\units$ which has order $\phi(m)$ (since one needs to send generators to generators), which can be explicitly calculated based on the prime factorization of $m$.
+  
+- Some calculations we'll need:
+  - $\Aut(C_9) \cong C_9\units \cong C_{\phi(9)} \cong C_6$, using that $\phi(p^k) = p^{k-1}(p-1)$.
+  - $\Aut(C_7) \cong C_7\units \cong C_{\phi(7)}\cong C_6$ using that $\phi(p) = p-1$.
+- To get a nonabelian group, we need a nontrivial semidirect product, so look at $\Hom(G, \Aut(H))$ in the two possible combinations.
+  - For $\Hom(C_7, \Aut(C_9)) \cong \Hom(C_7, C_6) \cong C_1 \da \ts{e}$ using that $\Hom(C_m, C_n) \cong C_{d}$ for $d = \gcd(m, n)$.
 :::
 
 
