--- a/Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md
+++ b/Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md
@@ -36,7 +36,10 @@ Give generators and relations for the non-commutative group $G$ of order 63 cont
   - $\Aut(C_9) \cong C_9\units \cong C_{\phi(9)} \cong C_6$, using that $\phi(p^k) = p^{k-1}(p-1)$.
   - $\Aut(C_7) \cong C_7\units \cong C_{\phi(7)}\cong C_6$ using that $\phi(p) = p-1$.
 - To get a nonabelian group, we need a nontrivial semidirect product, so look at $\Hom(G, \Aut(H))$ in the two possible combinations.
-  - For $\Hom(C_7, \Aut(C_9)) \cong \Hom(C_7, C_6) \cong C_1 \da \ts{e}$ using that $\Hom(C_m, C_n) \cong C_{d}$ for $d = \gcd(m, n)$.
+  - $\Hom(C_7, \Aut(C_9)) \cong \Hom(C_7, C_6) \cong C_1 \da \ts{e}$ using that $\Hom(C_m, C_n) \cong C_{d}$ for $d = \gcd(m, n)$.
+    So there are no nontrivial homs here, so only the direct product is possible.
+  - $\Hom(C_9, \Aut(C_7)) \cong \Hom(C_9, C_6) \cong C_3$, so use this!
+- So take $G\da C_7 \semidirect_\psi C_9$ for some $\psi: C_9 \to \Aut(C_7)$
 :::
 
 
