/ ‘Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md’

--- a/Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md
+++ b/Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md
@@ -31,7 +31,7 @@ Give generators and relations for the non-commutative group $G$ of order 63 cont
 
 - Idea: take a semidirect product involving $C_9$ and $C_7$.
   We'll need some facts: $\Hom(C_m, C_n) \cong C_d$ where $d = \gcd(m, n)$, and $\Aut(C_m)\cong C_m\units$ which has order $\phi(m)$ (since one needs to send generators to generators), which can be explicitly calculated based on the prime factorization of $m$.
-  
+
 - Some calculations we'll need:
   - $\Aut(C_9) \cong C_9\units \cong C_{\phi(9)} \cong C_6$, using that $\phi(p^k) = p^{k-1}(p-1)$.
   - $\Aut(C_7) \cong C_7\units \cong C_{\phi(7)}\cong C_6$ using that $\phi(p) = p-1$.
@@ -39,7 +39,13 @@ Give generators and relations for the non-commutative group $G$ of order 63 cont
   - $\Hom(C_7, \Aut(C_9)) \cong \Hom(C_7, C_6) \cong C_1 \da \ts{e}$ using that $\Hom(C_m, C_n) \cong C_{d}$ for $d = \gcd(m, n)$.
     So there are no nontrivial homs here, so only the direct product is possible.
   - $\Hom(C_9, \Aut(C_7)) \cong \Hom(C_9, C_6) \cong C_3$, so use this!
-- So take $G\da C_7 \semidirect_\psi C_9$ for some $\psi: C_9 \to \Aut(C_7)$
+  - Note that we don't have to consider possibilities for $C_3\cross C_3$, since including this as a factor would yield no elements of order 9.
+
+- So take $G\da C_7 \semidirect_\psi C_9$ for some $\psi: C_9 \to \Aut(C_7)$, and we can take the presentation
+\[
+G = \gens{x, y\st x^7, y^9, yxy\inv = \psi(x)}
+.\]
+
 :::
 
 
