/ ‘Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md’

--- a/Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md
+++ b/Algebra/UGA Questions (no solutions)/sections/9999_2021_Fall.md
@@ -46,6 +46,15 @@ Give generators and relations for the non-commutative group $G$ of order 63 cont
 G = \gens{x, y\st x^7, y^9, yxy\inv = \psi(x)}
 .\]
 
+- It now suffices to find a nontrivial $\psi: C_7\to C_7$.
+  Writing it multiplicatively as $C_7 = \gens{x\st x^7}$, any map that sends $x$ to a generator will do.
+  It suffices to choose any $k$ coprime to $7$, and then take $\psi(x) \da x^k$, which will be another generator.
+
+- So take 
+
+\[
+G = \gens{x, y\st x^7, y^9, yxy\inv = x^2}
+.\]
 :::
 
 
